<?xml version="1.0"?>
<package format="2">

	<name>rovi_system</name>
	<version>1.0.0</version>
	<description>Robotics and computer vision system for pick and place tasks with ROS</description>

	<author email="martinandrovich@gmail.com">Martin Androvich</author>
	<author email="dscho15@student.sdu.dk">Daniel Tofte Schøn</author>
	<maintainer email="martinandrovich@gmail.com">Martin Androvich</maintainer>

	<license>BSD</license>

	<url type="repository">https://github.com/martinandrovich/rovi_system</url>

	<!-- build tool -->
	<buildtool_depend>catkin</buildtool_depend>

	<!-- libraries -->
	<depend>OpenCV</depend>
	<depend>PCL</depend>
	<depend>Eigen3</depend>

	<!-- ROS packages -->
	<depend>roscpp</depend>
	<depend>roslib</depend>
	<depend>ros_utils</depend>

	<depend>rovi_models</depend>
	<depend>rovi_planner</depend>
	<depend>rovi_vision</depend>

	<depend>ur5_controllers</depend>
	<depend>ur5_description</depend>
	<depend>ur5_gazebo</depend>
	<depend>ur5_planner</depend>

</package>
